k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valentine
  namespace: apps
  labels:
    app: valentine
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: valentine
  template:
    metadata:
      labels:
        app: valentine
    spec:
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001 # <--- K3s applique un chown 10001 sur le volume au montage
      containers:
        - name: server
          image: DOCKER_IMAGE_PLACEHOLDER # Assure-toi de pousser l'image sur ton registry OVH
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
